<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="beep">Beep</string>
    <string name="beeper">Beeper</string>
    <string name="beep_off">BEEP OFF</string>
    <string name="beep_on">BEEP ON</string>
    <string name="popup">Popup</string>
    <string name="dismiss">Dismiss</string>
    <string name="recource_error">Помилка завантаження аудіофайла</string>

    <string name="title_activity_settings">Settings</string>

    <string name="category_sound_title">SOUND</string>
    <string name="category_vibration_title">VIBRATION</string>

    <string name="time_to_beep_key">timeToBeep</string>
    <string name="time_to_beep_title">Time to Beep</string>
    <string name="time_to_beep_summary">Time to Beep, sec</string>
    <string name="count_beep_key">countBeep</string>
    <string name="count_beep">Count Beep</string>
    <string name="sounds_title">Sounds</string>
    <string name="sounds_summary">Choose sound of Beep</string>
    <string name="vibrate_key">vibrateKey</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Enable vibration</string>

    <string name="notification_content">Time to beep: </string>
    <string name="notification_action_stop">Stop Beep</string>

    <string name="time_to_beep_invalid">Invalid value!</string>

</resources>